<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".LocalityFragment">


    <RelativeLayout
        android:id="@+id/rlTinda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/tinda_coca" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/tinda_logo_coca" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlTinda"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <!-- Start of Store Name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posname"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPosName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_background"
                    android:gravity="center"
                    android:hint="@string/posname" />

                <!-- END of Store Name -->


                <!-- Start of Owner Name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ownername"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"

                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etOwnerName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_background"
                    android:gravity="center"
                    android:hint="@string/ownername" />

                <!-- END of Owner Name -->


                <!-- Start of Owner Phone -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ownerPhone"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etOwnerPhone"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_background"
                    android:gravity="center"
                    android:hint="@string/ownerPhone"
                    android:inputType="phone" />

                <!-- END of Owner Phone -->


                <!-- Start of Owner Name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/managerName"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:visibility="gone"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etManagerName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    android:background="@drawable/edittext_background"
                    android:gravity="center"
                    android:hint="@string/managerName" />

                <!-- END of Owner Name -->


                <!-- Start of Owner Phone -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ManagerPhone"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:visibility="gone"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etManagerPhone"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext_background"
                    android:gravity="center"
                    android:visibility="gone"
                    android:hint="@string/ManagerPhone"
                    android:inputType="phone" />

                <!-- END of Owner Phone -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Dispose d'une caisse enregistreuse ? "
                        android:textColor="@color/colorPrimary"
                        android:textSize="19sp"
                        android:textStyle="bold"

                        />


                    <RadioGroup
                        android:id="@+id/rgPosSystem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginVertical="15dp"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/rbPosSystemYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="Oui" />

                        <RadioButton
                            android:id="@+id/rbPosSystemNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="Non" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/llNavigation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"

        >

        <ImageView
            android:id="@+id/fabPrev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_navigation_back"
            android:src="@drawable/ic_arrow_back" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"

            />

        <ImageView
            android:id="@+id/fabNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_navigation"
            android:src="@drawable/ic_arrow_forward" />
    </LinearLayout>

</RelativeLayout>