<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".LocalityFragment">

    <RelativeLayout
        android:id="@+id/rlTinda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/tinda_coca" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/tinda_logo_coca" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llNavigation"
        android:layout_below="@+id/rlTinda"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:orientation="vertical">


                <!-- Start of Owner Name -->
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surface"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spSurface"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/outline"
                    android:entries="@array/sufaceList"


                    android:gravity="center" />
                <!-- END of Owner Name -->


                <!-- Start of Owner Phone -->

                <LinearLayout
                    android:id="@+id/llPurchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sourceofpurchase"
                        android:textColor="@color/colorAccent"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spSourceOfPurchase"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/outline"
                        android:entries="@array/sourceofpurchaseList"


                        android:gravity="center" />

                    <!-- END of Owner Phone -->


                    <!-- Start of Owner Phone -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/freauencyofpurchase"
                        android:textColor="@color/colorAccent"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spFrequencyOfPurchase"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/outline"
                        android:entries="@array/freauencyofpurchaseList"


                        android:gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jours de visite"
                        android:textColor="@color/colorAccent"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <Button

                        android:id="@+id/btVisitDays"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/outline_simple"

                        android:text="Ajouter des jours de visite" />

                    <co.lujun.androidtagview.TagContainerLayout
                        android:id="@+id/tgVisitDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="9"
                        android:padding="10dp"


                        app:container_background_color="#fff"
                        app:container_border_color="#fff"
                        app:container_max_lines="2"
                        app:horizontal_interval="10dp"
                        app:tag_background_color="@color/colorAccent"
                        app:tag_border_color="@color/colorPrimaryDark"
                        app:tag_clickable="true"
                        app:tag_text_color="@color/colorWhite"

                        app:tag_text_size="15sp"
                        app:tag_theme="none"
                        app:vertical_interval="10dp" />

                    <!-- END of Owner Phone -->

                    <!-- Start of Owner Phone -->

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zoneType"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spZone"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/outline"
                    android:entries="@array/zoneTypeList"


                    android:gravity="center" />

                <!-- END of Owner Phone -->
                <!-- Start of Owner Phone -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classification"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spClassification"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/outline"
                    android:entries="@array/classificationList"


                    android:gravity="center" />

                <!-- END of Owner Phone -->


            </LinearLayout>
        </ScrollView>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/llNavigation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"

        >

        <ImageView
            android:id="@+id/fabPrev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_navigation_back"
            android:src="@drawable/ic_arrow_back" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"

            />

        <ImageView
            android:id="@+id/fabNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_navigation"
            android:src="@drawable/ic_save" />
    </LinearLayout>

</RelativeLayout>